# GA4-Measurement-Protocol-Python

./: .gitignore  DESCRIPTION.rst  README.md  ga4measurementprotocol.py  main.py  pyproject.toml  requirements.txt  setup.py  test_send_hit_http_status.py  test_warning_and_status_code.py
docs/: Makefile  index.html
docs/documentation/doctrees/: README.doctree  environment.pickle  ga4mp.doctree  index.doctree  main.doctree  modules.doctree  setup.doctree
docs/documentation/html/: .buildinfo  README.html  ga4mp.html  genindex.html  index.html  main.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html
docs/documentation/html/_sources/: index.rst.txt  modules.rst.txt
docs/source/: README.md  conf.py  ga4mp.rst  index.rst
ga4mp/: __init__.py  event.py  ga4mp.py  item.py  store.py  utils.py
ga4mp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_ga4mp.py  test_historical_hit.py  test_imports.py  test_status_code.py  test_user_properties.py  test_warning_and_status_code.py
tests/: test_All_imports.py  test_GtagMP.py  test_GtagMP_internal_functions.py  test_GtagMP_internal_param_functions.py  test_GtagMP_internal_property_functions.py  test_GtagMP_internal_utility_functions.py  test_GtagMP_validation_hits.py
